# playchitect

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  REVIEW_RESPONSE_TASK-02.md  coverage.xml  package-lock.json  package.json  pr_comment_body.md  prd.json  progress.txt  pyproject.toml  ralph-loop.sh  ralph-once.sh  setup.py
.github/workflows/: ci.yml  flatpak.yml  pages.yml  publish.yml
data/: com.github.jameswestwood.Playchitect.appdata.xml  playchitect.desktop  weight_config.example.yaml
docs/: GITHUB_ISSUES.md  MILESTONE1_COMPLETE.md  ROADMAP.md  ROADMAP_FEEDBACK.md  index.md  wireframe.html
docs/.vitepress/: config.ts
docs/contributing/: architecture.md  index.md  releasing.md  testing.md
docs/guide/: cli-reference.md  index.md  installation.md  quick-start.md
docs/planning/: ROADMAP.md  flatpak-guide.md  gui-design.md  pypi-publishing.md  release-strategy.md
docs/planning/milestones/: milestone-2-complete.md
docs/research/: 5-rhythms-dj-sets.md  arranging_a_good_DJ_set.md  audio-mood-detection.md  issue-3-feature-weighting.md  mixxx-db-schema.md
packaging/flatpak/: com.github.jameswestwood.Playchitect.yml
playchitect/cli/: commands.py
playchitect/core/: arc_sequencer.py  audio_scanner.py  cache_db.py  clustering.py  compatibility.py  cue_generator.py  cue_timing.py  embedding_extractor.py  energy_blocks.py  export.py  genre_resolver.py  intensity_analyzer.py  metadata_extractor.py  mixxx_sync.py  mood_classifier.py  play_history.py  playlist_builder.py  sequencer.py  set_builder_chapter_generator.py  set_chapter.py  structural_analyzer.py  track_previewer.py  track_selector.py  vibe_tags.py  weighting.py
playchitect/core/exporters/: __init__.py  mixxx_sync.py  rekordbox_xml.py  traktor_nml.py
playchitect/core/importers/: __init__.py  rekordbox_import.py
playchitect/core/naming/: __init__.py  grammar_engine.py  playlist_namer.py  vibe_profiler.py
playchitect/gui/: app.py  preferences_window.py  style.css
playchitect/gui/views/: __init__.py  export_view.py  library_view.py  playlists_view.py  set_builder_view.py
playchitect/gui/widgets/: cluster_stats.py  cluster_view.py  energy_arc_widget.py  track_list.py  track_preview_panel.py
playchitect/gui/windows/: main_window.py
playchitect/utils/: config.py  desktop_install.py  warnings.py  weight_config.py
scripts/: generate_flatpak_sources.py  generate_icons.py  generate_perf_report.py  review_pr.sh
tests/benchmarks/: conftest.py  test_fast_perf.py
tests/fixtures/: rekordbox_mini.xml
tests/gui/: conftest.py  test_brand_css.py  test_burger_menu.py  test_cluster_view.py  test_energy_flow_gui_issue39.py  test_export_view.py  test_gui_app.py  test_gui_layout.py  test_harmonic_mixing_gui_issue37.py  test_library_view.py  test_playlists_view.py  test_set_builder_view.py  test_tooltips_gui_issue5.py  test_track_list.py  test_track_preview_panel.py
tests/integration/: test_cli_errors.py  test_cli_info.py  test_cli_smoke.py  test_cli_weight_flags.py  test_cli_weight_flags_issue27.py
tests/unit/: test_analysis_robustness.py  test_arc_sequencer.py  test_audio_scanner.py  test_cache_db.py  test_cli_sequencing.py  test_cluster_stats.py  test_clustering.py  test_compatibility.py  test_cue_generator.py  test_cue_timing.py  test_desktop_install.py  test_embedding_extractor.py  test_energy_blocks.py  test_energy_flow_issue38.py  test_exporters.py  test_genre_resolver.py  test_grammar_engine.py  test_harmonic_mixing_issue36.py  test_intensity_analyzer.py  test_m3u_export.py  test_metadata_extractor.py  test_mixxx_sync.py  test_mood_classifier.py  test_play_history.py  test_playlist_builder.py  test_playlist_namer.py  test_rekordbox_import.py  test_sequencer.py  test_set_builder.py  test_set_chapter.py  test_structural_analyzer.py  test_timbre_texture_issue40.py  test_track_previewer.py  test_track_selector.py  test_vibe_profiler.py  test_vibe_tags.py  test_vocal_filter.py  test_warning_suppression.py  test_weight_config.py  test_weighting.py
