[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playchitect"
version = "0.1.0"
description = "Smart DJ playlist management with intelligent BPM clustering"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0"}
authors = [
    {name = "James Westwood"}
]
keywords = ["dj", "playlist", "audio", "clustering", "bpm", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Environment :: X11 Applications :: GTK",
]

dependencies = [
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embeddings = [
    "essentia-tensorflow",
]
gui = [
    # PyGObject (gi) must be installed via the OS package manager — it cannot be
    # built from pip without system Cairo headers.
    # Fedora:  sudo dnf install python3-gobject gtk4
    # Ubuntu:  sudo apt install python3-gi python3-gi-cairo gir1.2-gtk-4.0
    # The venv must be created with --system-site-packages to find gi.
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.0",
    "ty>=0.0.17",
    "pre-commit>=3.3.0",
    "soundfile>=0.12.0",  # For unit tests with synthetic audio
    "pytest-benchmark>=4.0.0",
    # Pillow is a dev-only dep: used by scripts/generate_icons.py to regenerate
    # icon assets from the source JPEG. Pre-generated PNGs/ICO are committed to
    # the repo, so Pillow is NOT needed at runtime by the installed package.
    "Pillow>=10.0.0",
]

[project.scripts]
playchitect = "playchitect.cli.commands:main"
playchitect-gui = "playchitect.gui.app:main"
playchitect-install-desktop = "playchitect.utils.desktop_install:main"

[project.urls]
Homepage = "https://github.com/james-westwood/playchitect"
Issues = "https://github.com/james-westwood/playchitect/issues"

[tool.setuptools]
# Explicit package list; mirrors what auto-discovery would find.
packages = [
    "playchitect",
    "playchitect.cli",
    "playchitect.core",
    "playchitect.gui",
    "playchitect.gui.widgets",
    "playchitect.gui.windows",
    "playchitect.utils",
]

[tool.setuptools.data-files]
# System-level XDG/freedesktop paths for `pip install` into a prefix.
# For per-user or system-wide installation without pip, use:
#   playchitect-install-desktop [--system-wide]
"share/applications" = ["data/playchitect.desktop"]
"share/metainfo" = ["data/com.github.jameswestwood.Playchitect.appdata.xml"]
"share/icons/hicolor/16x16/apps" = ["data/icons/hicolor/16x16/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/22x22/apps" = ["data/icons/hicolor/22x22/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/24x24/apps" = ["data/icons/hicolor/24x24/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/32x32/apps" = ["data/icons/hicolor/32x32/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/48x48/apps" = ["data/icons/hicolor/48x48/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/64x64/apps" = ["data/icons/hicolor/64x64/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/128x128/apps" = ["data/icons/hicolor/128x128/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/256x256/apps" = ["data/icons/hicolor/256x256/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor/512x512/apps" = ["data/icons/hicolor/512x512/apps/com.github.jameswestwood.Playchitect.png"]
"share/icons/hicolor" = ["data/icons/playchitect.ico"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ty is in beta (0.0.x) — configuration may change between versions.
# Use `uv run ty check` or the pre-commit hook to run type checks.
[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=playchitect --cov-report=html --cov-report=term"
